--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.input{
+    @apply w-80 h-14 border border-gray-400 rounded-xl p-2 mt-6
+}
+.btn{
+    @apply w-80 h-10 bg-primary-500 border rounded-xl mt-4 border-none text-gray-400
+}
+.btn1{
+    @apply w-64 h-24 bg-white border rounded-xl mt-4 ml-4 border-none text-blue-200 text-3xl font-extrabold hover:bg-primary-500 shadow-xl hover:scale-75
+}
+.btn2{
+    @apply mr-2 ml-2 text-lg w-32 h-10 md:bg-blue-100 text-gray-400 shadow-xl rounded-sm justify-center flex items-center cursor-pointer hover:shadow hover:text-black md:w-32 md:h-14 md:text-lg
+}
+.btn3{
+    @apply w-80 h-12 bg-white mt-3 relative left-1 top-4 rounded-md p-4 text-lg shadow-xl hover:shadow
+}
+.btn4{
+    @apply ml-1 top-7 text-xs -left-56 w-20 h-10 p-1 bg-white relative rounded-md shadow-xl hover:shadow md:w-52 md:h-12 md:p-4 md:ml-3 md:text-lg md:left-1 md:top-4
+}
+.btn5{
+    @apply w-20 h-8 bg-gray-400 ml-2 text-center relative left-3 top-1 rounded-md text-white font-bold text-lg 
+}
+.btn6{
+    @apply ml-1 top-7 text-xs -left-48 w-20 h-10 p-1 bg-white shadow-xl hover:shadow rounded-md relative md:ml-3 md:left-1 md:top-4 md:p-4 md:text-lg md:w-44 md:h-12
+}
+.btn7{
+    @apply w-20 h-8 text-sm bg-gray-400 ml-2 relative  top-1 rounded-md text-white font-bold md:text-lg shadow-xl hover:shadow hover:text-black hover:bg-white
+}
+.submit{
+    @apply -left-48 top-9 text-xs h-8 text-black font-bold bg-gray-400 relative rounded-md shadow-xl hover:shadow hover:text-black hover:bg-white md:text-white md:w-40 md:h-12 md:text-lg md:font-bold md:left-1 md:top-4 md:ml-2
+}
+.header-input{
+    @apply w-80 border-2 border-gray-400 relative left-6 h-14 m-2 rounded p-2 shadow-xl hover:shadow text-gray-600
+}
+.table-header{
+    @apply bg-gray-200 w-36 h-10 rounded pt-2 text-xs md:text-lg
+}
+.table-data{
+    @apply bg-gray-100 text-xs w-52 ml-2 h-10 rounded pt-2 flex justify-center md:text-xl
+}
+.container{
+    width: 250rem;
+    left: 192px;
+}
+.header-profile{
+    left: 67rem;
+    width: 30rem;
+}
+.header-img{
+    border-radius: 50%;
+    width: 110px;
+    height: 110px;
+}
+.creditor{
+    position: absolute;
+    top: 450px;
+    left: 51rem
+}
+.debtor{
+    position: absolute;
+    top: 450px;
+    left: 73rem
+}
+@media (max-width: 768px) {
+    .header-profile{
+        left: 10.7rem;
+        /* width: 30rem; */
+    }
+    .header-img{
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        left: 90px;
+        top: -10px;
+    }
+    .header-name{
+        /* position: relative; */
+        left: -250px;
+        top: 95px;
+    }
+    .creditor{
+        position: absolute;
+        top: 580px;
+        left: 35rem
+    }
+    .debtor{
+        position: absolute;
+        top: 690px;
+        left: 35rem
+    }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
