--- a/src/index.css
+++ b/src/index.css
@@ -135,5 +135,15 @@
         position: relative;
         left: 84rem;
     }
+    .deletebtn{
+        position: absolute;
+        left: 35.5rem;
+        top: 42px;
+        height: 35px;
+        width: 65px;
+        background-color: rgb(21, 175, 21);
+        border-radius: 7px;
+        color: #fff;
+    }
 }
 
