--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,18 @@ table {
     /* border: 1px solid #000; */
     width: 80%;
   }
+  .nav:hover{
+    /* position: relative; */
+    text-decoration: none;
+    align-items: center;
+    /* justify-content: center; */
+    border-top-left-radius: 10px;
+    width: 145%;
+    height: 40px;
+    opacity: 0.7;
+    color: #000;
+    background-color: #aaa;
+  }
 /**************For small screen***********************/
 @media (max-width: 768px) {
     .header-profile{
