--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,7 @@
     top: 450px;
     left: 71rem
 }
+.tab,
 .table:nth-child(even) {
     background-color: #aaa;
 }
@@ -190,13 +191,9 @@ table {
         left: 77.4rem;
     }
     .deletebtn{
-        position: absolute;
-        left: 35.5rem;
-        top: 60px;
-        height: 35px;
-        width: 65px;
-        background-color: rgb(21, 175, 21);
-        border-radius: 7px;
+        
+        background-color: rgba(250, 9, 9, 0.7);
+        border-radius: 4px;
         color: #fff;
     } 
     .Del{
@@ -214,7 +211,7 @@ table {
         display: block;
         grid-template-columns: auto auto auto auto;
     }
-    th, td {
+    .tab, th, td {
         gap: 10px;
         padding: 8px;
         text-align: left;
