--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,60 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities; 
+@tailwind utilities;
 
-.input{
-    @apply w-[18rem] md:w-80 md:h-14 border border-gray-400 rounded-xl p-2 mt-6
+.input {
+  @apply w-[18rem] md:w-80 md:h-14 border border-gray-400 rounded-xl p-2 mt-6;
 }
-.btn{
-    @apply w-80 h-10 bg-primary-500 border rounded-xl mt-4 border-none text-gray-400
+.btn {
+  @apply w-80 h-10 bg-primary-500 border rounded-xl mt-4 border-none text-gray-400;
 }
-.btn1{
-    @apply w-64 h-24 bg-white border rounded-xl mt-4 ml-4 border-none text-blue-200 text-3xl font-extrabold hover:bg-primary-500 shadow-xl hover:scale-75
+.btn1 {
+  @apply w-64 h-24 bg-white border rounded-xl mt-4 ml-4 border-none text-blue-200 text-3xl font-extrabold hover:bg-primary-500 shadow-xl hover:scale-75;
 }
-.btn2{
-    @apply mr-1 ml-1 text-lg w-32 h-10 md:bg-blue-100 text-gray-400 shadow-xl rounded-sm justify-center flex items-center cursor-pointer hover:shadow hover:text-black md:w-[140px] md:h-14 md:text-lg
+.btn2 {
+  @apply mr-1 ml-1 text-lg w-32 h-10 md:bg-blue-100 text-gray-400 shadow-xl rounded-sm justify-center flex items-center cursor-pointer hover:shadow hover:text-black md:w-[140px] md:h-14 md:text-lg;
 }
-.btn3{
-    @apply w-80 h-12 bg-white mt-3 relative left-1 top-4 rounded-md p-4 text-lg shadow-xl hover:shadow
+.btn3 {
+  @apply w-80 h-12 bg-white mt-3 relative left-1 top-4 rounded-md p-4 text-lg shadow-xl hover:shadow;
 }
-.btn4{
-    @apply ml-1 top-7 text-xs -left-56 w-20 h-10 p-1 bg-white relative rounded-md shadow-xl hover:shadow md:w-48 md:h-14 md:p-4 md:ml-3 md:text-lg md:left-1 md:top-4
+.btn4 {
+  @apply ml-1 top-7 text-xs -left-56 w-20 h-10 p-1 bg-white relative rounded-md shadow-xl hover:shadow md:w-48 md:h-14 md:p-4 md:ml-3 md:text-lg md:left-1 md:top-4;
 }
-.btn5{
-    @apply w-20 h-6 bg-[#676552] ml-2 text-center relative left-3 top-1 rounded-md text-white font-bold text-base 
+.btn5 {
+  @apply w-20 h-6 bg-[#676552] ml-2 text-center relative left-3 top-1 rounded-md text-white font-bold text-base;
 }
-.btn6{
-    @apply ml-1 top-7 text-xs -left-48 w-20 h-10 p-1 bg-white shadow-xl hover:shadow rounded-md relative md:ml-3 md:left-1 md:top-4 md:p-4 md:text-lg md:w-[10.3rem] md:h-12
+.btn6 {
+  @apply ml-1 top-7 text-xs -left-48 w-20 h-10 p-1 bg-white shadow-xl hover:shadow rounded-md relative md:ml-3 md:left-1 md:top-4 md:p-4 md:text-lg md:w-[10.3rem] md:h-12;
 }
-.btn7{
-    @apply w-20 h-8 text-sm bg-gray-400 ml-2 relative top-10 md:top-20 rounded-md text-white font-bold md:text-lg shadow-xl hover:shadow hover:text-black hover:bg-white 
+.btn7 {
+  @apply w-20 h-8 text-sm bg-gray-400 ml-2 rounded-md text-white font-bold md:text-lg shadow-xl hover:shadow hover:text-black hover:bg-white;
 }
-.btndebtdel{
-    @apply w-20 h-8 text-sm bg-gray-400 ml-2 relative top-20 md:top-20 rounded-md text-white font-bold md:text-lg shadow-xl hover:shadow hover:text-black hover:bg-white left-[29rem] md:left-[77.5rem]
+.btndebtdel {
+  @apply w-20 h-8 text-sm bg-gray-400 ml-2 relative top-20 md:top-28 rounded-md text-white font-bold md:text-lg shadow-xl hover:shadow hover:text-black hover:bg-white left-[29rem] md:left-[77.5rem];
 }
-.submit{
-    @apply -left-48 top-9 text-xs h-8 p-2 font-bold bg-gray-400 relative rounded-md shadow-xl hover:shadow hover:text-black hover:bg-white text-white md:w-40 md:h-12 md:text-lg md:font-bold md:left-1 md:top-4 md:ml-2
+.submit {
+  @apply -left-48 top-9 text-xs h-8 p-2 font-bold bg-gray-400 relative rounded-md shadow-xl hover:shadow hover:text-black hover:bg-white text-white md:w-40 md:h-12 md:text-lg md:font-bold md:left-1 md:top-4 md:ml-2;
 }
-.save{
-    @apply relative left-[22.5rem] top-24 w-24 text-xs h-8 font-bold bg-gray-400 rounded-md shadow-xl hover:shadow hover:text-black hover:bg-white md:text-white md:w-40 md:h-12 md:text-lg md:font-bold md:top-36 md:ml-2 md:left-[67rem]
+.save {
+  @apply relative left-[22.5rem] top-24 w-24 text-xs h-8 font-bold bg-gray-400 rounded-md shadow-xl hover:shadow hover:text-black hover:bg-white md:text-white md:w-40 md:h-12 md:text-lg md:font-bold md:top-36 md:ml-2 md:left-[67rem];
 }
-.header-input{
-    @apply w-80 border-2 border-gray-400 relative left-6 h-14 m-2 rounded p-2 shadow-xl hover:shadow text-gray-600
+.unsave {
+  @apply relative left-[22.5rem] top-24 w-24 text-xs h-8 font-bold bg-gray-200 rounded-md shadow-xl  md:text-black md:w-40 md:h-12 md:text-lg md:font-bold md:top-24 md:ml-2 md:left-[67rem] md:mb-5 mt-5;
 }
-.table-header{
-    @apply flex text-center justify-center bg-gray-200 w-[6rem] md:w-[8.5rem] h-10 rounded pt-2 text-xs md:text-lg
+.header-input {
+  @apply w-80 border-2 border-gray-400 relative left-6 h-14 m-2 rounded p-2 shadow-xl hover:shadow text-gray-600;
 }
-.table-data{
-    @apply relative bg-gray-200 text-xs rounded pt-2 flex justify-center w-16 md:w-36 md:text-xl
+.table-header {
+  @apply flex text-center justify-center bg-gray-200 w-[6rem] md:w-[8.5rem] h-10 rounded pt-2 text-xs md:text-lg;
 }
-.dropdown{
-    @apply z-10 absolute flex flex-col -left-60 md:left-12 top-3 text-center justify-center mt-1 w-40 h-8 bg-slate-100 hover:bg-slate-200 cursor-pointer
+.table-data {
+  @apply relative bg-gray-200 text-xs rounded pt-2 flex justify-center w-16 md:w-36 md:text-xl;
 }
-.btnz,.btny{
+.dropdown {
+  @apply z-10 absolute flex flex-col -left-60 md:left-12 top-3 text-center justify-center mt-1 w-40 h-8 bg-slate-100 hover:bg-slate-200 cursor-pointer;
+}
+.btnz,
+.btny {
   position: relative;
   top: 15px;
   left: 100px;
@@ -62,7 +66,7 @@
   transition: 0.5s;
   box-shadow: #948989 2px 1px;
 }
-.btnq{
+.btnq {
   position: relative;
   top: 15px;
   border-radius: 5px;
@@ -76,155 +80,155 @@
 }
 .btny:hover,
 .btnq:hover,
-.btnz:hover{
-    scale: 1.2;
-    background-color: #b3af8f; 
-    color: #333;
-    box-shadow: #5b19b2 2px 1px;
+.btnz:hover {
+  scale: 1.2;
+  background-color: #b3af8f;
+  color: #333;
+  box-shadow: #5b19b2 2px 1px;
 }
-.save1{
-   position: relative;
-   color: #fff;
-   top: 7rem;
-   margin: 10px;
-   background: rgb(193, 187, 187);
-   left: 68rem;
-   width: 150px;
-   height: 40px;
-   border-radius: 10px;
-   font-size: 20px;
-   font-weight: 700;
+.save1 {
+  position: relative;
+  color: #fff;
+  top: 7rem;
+  margin: 10px;
+  background: rgb(193, 187, 187);
+  left: 68rem;
+  width: 150px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: 700;
 }
-.save1:hover{
+.save1:hover {
   color: #000;
   background: #1606f5;
   scale: 0.9;
   transition: 0.4s;
 }
-.table{
-    width:60px;
-    gap: 20px;
-    margin-left: 10px;
+.table {
+  width: 60px;
+  gap: 20px;
+  margin-left: 10px;
 }
-.container{
-    width: 250rem;
-    left: 192px;
+.container {
+  width: 250rem;
+  left: 175px;
 }
-.header-profile{
-    left: 59.5rem;
-    width: 30rem;
+.header-profile {
+  left: 59.5rem;
+  width: 30rem;
 }
-.header-img{
-    border-radius: 50%;
-    width: 110px;
-    height: 110px;
+.header-img {
+  border-radius: 50%;
+  width: 110px;
+  height: 110px;
 }
-.creditor{
-    position: absolute;
-    top: 450px;
-    left: 51rem
+.creditor {
+  position: absolute;
+  top: 450px;
+  left: 51rem;
 }
-.debtor{
-    position: absolute;
-    top: 450px;
-    left: 71rem
+.debtor {
+  position: absolute;
+  top: 450px;
+  left: 71rem;
 }
 .tab,
 .table:nth-child(even) {
-    background-color: #aaa;
+  background-color: #aaa;
 }
-td, th {
-    border: 1px solid #0d0a0a;
-    text-align: center;
-    width: 10%;
-    padding: 8px;
-  }
+td,
+th {
+  border: 1px solid #0d0a0a;
+  text-align: center;
+  width: 10%;
+  padding: 8px;
+}
 table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    /* border: 1px solid #000; */
-    width: 80%;
-  }
-  .nav:hover{
-    opacity: 0.7;
-    color: #000;
-  }
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  /* border: 1px solid #000; */
+  width: 80%;
+}
+.nav:hover {
+  opacity: 0.7;
+  color: #000;
+}
 /**************For small screen***********************/
 @media (max-width: 768px) {
-    .header-profile{
-        left: 10.7rem;
-        /* width: 30rem; */
-    }
-    .header-img{
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-        left: 90px;
-        top: -10px;
-    }
-    .header-name{
-        /* position: relative; */
-        /* left: -250px;
+  .header-profile {
+    left: 10.7rem;
+    /* width: 30rem; */
+  }
+  .header-img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    left: 90px;
+    top: -10px;
+  }
+  .header-name {
+    /* position: relative; */
+    /* left: -250px;
         top: 95px; */
-    }
-    .creditor{
-        position: absolute;
-        top: 640px;
-        left: 23rem
-    }
-    .debtor{
-        position: absolute;
-        top: 735px;
-        left: 23rem
-    }
-    .btn7a{
+  }
+  .creditor {
+    position: absolute;
+    top: 640px;
+    left: 23rem;
+  }
+  .debtor {
+    position: absolute;
+    top: 735px;
+    left: 23rem;
+  }
+  /* .btn7a{
         position: relative;
         top: 35px;
         left: 460px;
-    }
-    .deletebtn{
-        
-        background-color: rgba(250, 9, 9, 0.7);
-        border-radius: 4px;
-        color: #fff;
-    } 
+    } */
+  .deletebtn {
+    background-color: rgba(250, 9, 9, 0.7);
+    border-radius: 4px;
+    color: #fff;
+  }
 }
 
 /****************For big screen********************/
 @media (min-width: 768px) {
-    body{
-        overflow-x: hidden;
-    }
-    .btn7a{
+  body {
+    overflow-x: hidden;
+  }
+  /* .btn7a{
         position: relative;
         left: 77.4rem;
-    }
-    .deletebtn{
-        
-        background-color: rgba(250, 9, 9, 0.7);
-        border-radius: 4px;
-        color: #fff;
-    } 
-    .Del{
-        width: 40rem;
-        left: 12rem;
-    }
-    .catModel{
-        z-index: 1;
-    }
-    .catForm{
-        width: 32.3rem;
-    }
-    table {
-        /* border-collapse: collapse; */
-        display: block;
-        grid-template-columns: auto auto auto auto;
-    }
-    .tab, th, td {
-        gap: 10px;
-        padding: 8px;
-        text-align: left;
-        border-bottom: 1px solid #ddd;
-    }
+    } */
+  .deletebtn {
+    background-color: rgba(250, 9, 9, 0.7);
+    border-radius: 4px;
+    color: #fff;
+  }
+  .Del {
+    width: 40rem;
+    left: 12rem;
+  }
+  .catModel {
+    z-index: 1;
+  }
+  .catForm {
+    width: 32.3rem;
+  }
+  table {
+    /* border-collapse: collapse; */
+    display: block;
+    grid-template-columns: auto auto auto auto;
+  }
+  .tab,
+  th,
+  td {
+    gap: 10px;
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
 }
-
