--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   @apply w-80 h-12 bg-white mt-3 relative left-1 top-4 rounded-md p-4 text-lg shadow-xl hover:shadow;
 }
 .btn4 {
-  @apply ml-1 top-7 text-xs -left-56 w-20 h-10 p-1 bg-white relative rounded-md shadow-xl hover:shadow md:w-48 md:h-14 md:p-4 md:ml-3 md:text-lg md:left-1 md:top-4;
+  @apply ml-1 top-7 text-xs -left-56 w-20 h-10 p-1 bg-white relative rounded-md shadow-xl hover:shadow md:w-[9.7rem] md:h-14 md:p-4 md:ml-3 md:text-lg md:left-1 md:top-4;
 }
 .btn5 {
   @apply w-20 h-6 bg-[#676552] ml-2 text-center relative left-3 top-1 rounded-md text-white font-bold text-base;
@@ -29,23 +29,20 @@
 .btn7 {
   @apply w-20 h-8 text-sm bg-gray-400 ml-2 rounded-md text-white font-bold md:text-lg shadow-xl hover:shadow hover:text-black hover:bg-white;
 }
-.btndebtdel {
-  @apply w-20 h-8 text-sm bg-gray-400 ml-2 relative top-20 md:top-28 rounded-md text-white font-bold md:text-lg shadow-xl hover:shadow hover:text-black hover:bg-white left-[29rem] md:left-[77.5rem];
-}
 .submit {
-  @apply -left-48 top-9 text-xs h-8 p-2 font-bold bg-gray-400 relative rounded-md shadow-xl hover:shadow hover:text-black hover:bg-white text-white md:w-40 md:h-12 md:text-lg md:font-bold md:left-1 md:top-4 md:ml-2;
+  @apply -left-[11rem] top-9 text-xs h-8 p-2 font-bold bg-gray-400 relative rounded-md shadow-xl hover:shadow hover:text-black hover:bg-white text-white md:w-40 md:h-12 md:text-lg md:font-bold md:left-1 md:top-4 md:ml-2;
 }
 .save {
   @apply relative left-[22.5rem] top-24 w-24 text-xs h-8 font-bold bg-gray-400 rounded-md shadow-xl hover:shadow hover:text-black hover:bg-white md:text-white md:w-40 md:h-12 md:text-lg md:font-bold md:top-36 md:ml-2 md:left-[67rem];
 }
 .unsave {
-  @apply relative left-[22.5rem] top-24 w-24 text-xs h-8 font-bold bg-gray-200 rounded-md shadow-xl  md:text-black md:w-40 md:h-12 md:text-lg md:font-bold md:top-24 md:ml-2 md:left-[67rem] md:mb-5 mt-5;
+  @apply relative left-[17rem] top-24 w-24 text-xs h-8 font-bold bg-gray-200 rounded-md shadow-xl  md:text-black md:w-40 md:h-12 md:text-lg md:font-bold md:top-24 md:ml-2 md:left-[67rem] md:mb-5 mt-5;
 }
 .header-input {
   @apply w-80 border-2 border-gray-400 relative left-6 h-14 m-2 rounded p-2 shadow-xl hover:shadow text-gray-600;
 }
 .table-header {
-  @apply flex text-center justify-center bg-gray-200 w-[6rem] md:w-[8.5rem] h-10 rounded pt-2 text-xs md:text-lg;
+  @apply flex text-center justify-center bg-gray-200 w-[9.7rem] md:w-[9.7rem] h-10 rounded pt-2 text-xs md:text-lg;
 }
 .table-data {
   @apply relative bg-gray-200 text-xs rounded pt-2 flex justify-center w-16 md:w-36 md:text-xl;
@@ -178,15 +175,10 @@ table {
   }
   .header-img {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    left: 90px;
-    top: -10px;
-  }
-  .header-name {
-    /* position: relative; */
-    /* left: -250px;
-        top: 95px; */
+    width: 60px;
+    height: 60px;
+    left: 120px;
+    top: 0px;
   }
   .creditor {
     position: absolute;
