--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,10 @@
   @apply w-64 h-24 bg-white border rounded-xl mt-4 ml-4 border-none text-blue-200 text-3xl font-extrabold hover:bg-primary-500 shadow-xl hover:scale-75;
 }
 .btn2 {
-  @apply mr-1 ml-1 text-lg w-32 h-10 md:bg-blue-100 text-gray-400 shadow-xl rounded-sm justify-center flex items-center cursor-pointer hover:shadow hover:text-black md:w-[140px] md:h-14 md:text-lg;
+  @apply mr-1 ml-1 text-lg w-32 h-10 md:bg-blue-100 text-gray-400 shadow-xl rounded-sm justify-center flex items-center cursor-pointer hover:shadow hover:text-black md:w-[140px] md:h-14 md:text-lg no-underline;
+}
+.btn20 {
+  @apply mr-1 ml-1 text-lg w-32 h-10 md:bg-blue-100 text-gray-400 shadow-xl rounded-sm justify-center flex items-center cursor-pointer hover:shadow hover:text-black md:w-[140px] md:h-14 md:text-base no-underline;
 }
 .btn3 {
   @apply w-80 h-12 bg-white mt-3 relative left-1 top-4 rounded-md p-4 text-lg shadow-xl hover:shadow;
@@ -21,7 +24,7 @@
   @apply ml-1 top-7 text-xs -left-56 w-20 h-10 p-1 bg-white relative rounded-md shadow-xl hover:shadow md:w-[9.7rem] md:h-14 md:p-4 md:ml-3 md:text-lg md:left-1 md:top-4;
 }
 .btn5 {
-  @apply w-20 h-6 bg-[#676552] ml-2 text-center relative left-3 top-1 rounded-md text-white font-bold text-base;
+  @apply w-28 h-6 bg-[#676552] ml-2 text-center relative left-3 top-1 rounded-md text-white font-bold text-base;
 }
 .btn6 {
   @apply ml-1 top-7 text-xs -left-48 w-20 h-10 p-1 bg-white shadow-xl hover:shadow rounded-md relative md:ml-3 md:left-1 md:top-4 md:p-4 md:text-lg md:w-[10.3rem] md:h-12;
@@ -59,7 +62,12 @@
 .register {
   @apply absolute top-[7rem] md:top-[10rem] left-2 md:left-[13rem] w-[18rem] md:w-[25rem] text-[13px] md:text-[20px] font-bold text-red-700;
 }
-
+.pcs {
+  @apply w-12 h-10 shadow-xl hover:shadow relative top-8 ml-2 -mr-2 pl-2 rounded-md cursor-pointer text-xl text-gray-400;
+}
+.crt {
+  @apply w-12 h-10 shadow-xl hover:shadow relative top-8 ml-2 pl-1 rounded-md cursor-pointer text-2xl text-black bg-yellow-500;
+}
 .btnz {
   position: relative;
   top: 15px;
@@ -128,6 +136,11 @@
   position: absolute;
   top: 450px;
   left: 51rem;
+}
+.stock {
+  position: absolute;
+  top: 450px;
+  left: 21rem;
 }
 .debtor {
   position: absolute;
