--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,13 @@
   @apply w-28 h-6 bg-[#676552] ml-2 text-center relative left-3 top-1 rounded-md text-white font-bold text-base;
 }
 .btn6 {
-  @apply ml-1 top-7 text-xs -left-48 w-20 h-10 p-1 bg-white shadow-xl hover:shadow rounded-md relative md:ml-3 md:left-1 md:top-4 md:p-4 md:text-lg md:w-[10.3rem] md:h-12;
+  @apply ml-1 top-7 text-gray-400 text-xs -left-48 w-20 h-10 p-1 bg-white shadow-xl hover:shadow rounded-md relative md:ml-3 md:left-1 md:top-4 md:p-1 md:text-lg md:w-[8.8rem] md:h-12;
+}
+.btn6a {
+  @apply ml-1 top-7 text-xs -left-48 w-20 h-10 p-1 bg-white shadow-xl hover:shadow rounded-md relative md:ml-3 md:left-1 md:top-4 md:p-4 md:text-lg md:w-[7.8rem] md:h-12;
+}
+.btn6b {
+  @apply ml-1 top-7 text-xs -left-48 w-20 h-10 p-1 bg-white shadow-xl hover:shadow rounded-md relative md:ml-3 md:left-1 md:top-4 md:pl-2 md:text-lg md:w-[8.8rem] md:h-12;
 }
 .btn7 {
   @apply w-20 h-8 text-sm bg-gray-400 ml-2 rounded-md text-white font-bold md:text-lg shadow-xl hover:shadow hover:text-black hover:bg-white;
@@ -45,7 +51,7 @@
   @apply w-80 border-2 border-gray-400 relative left-6 h-14 m-2 rounded p-2 shadow-xl hover:shadow text-gray-600;
 }
 .table-header {
-  @apply flex text-center justify-center bg-gray-200 w-[9.7rem] md:w-[9.7rem] h-10 rounded pt-2 text-xs md:text-lg;
+  @apply flex text-center justify-center bg-gray-200 w-[9.7rem] md:w-[10rem] h-10 rounded pt-2 text-xs md:text-lg;
 }
 .table-data {
   @apply relative bg-gray-200 text-xs rounded pt-2 flex justify-center w-16 md:w-36 md:text-xl;
